make swag docs of admin API
